# aichat_mobile

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
android/: manifest.template.xml
assets/: README.txt
ios/: Info.plist
src/: main.py  main_simple.py
src/api/: __init__.py  openrouter.py
src/ui/: __init__.py  components.py  styles.py
src/utils/: __init__.py  analytics.py  cache.py  logger.py  monitor.py  storage.py
